istio/istio_demo_7.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: vs-config-for-fleetman-staff-service
  namespace: default
spec:
  hosts:
    - fleetman-staff-service.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: fleetman-staff-service.default.svc.cluster.local
            subset: all-staff-service-pods
          # weight: 100 # not needed if there is only one destination
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-staff-service-istio-lb-config
  namespace: default
spec:
  host: fleetman-staff-service.default.svc.cluster.local
  trafficPolicy: 
    loadBalancer:
      consistentHash:
        httpHeaderName: x-myval
  subsets:
    - labels:
        app: staff-service
      name: all-staff-service-pods
