istio/istio_demo_8.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"   # Domain name of the external website
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp-vs
  namespace: default
spec:
  hosts: # incoming hosts for which we are applying the proxy rules
    #- fleetman-webapp.default.svc.cluster.local
    - "*" # copy the value of the gateways hosts
  gateways:
    - ingress-gateway-configuration
  http:
    - match:
      - uri: # IF
          prefix: "/experimental"
      - uri: # OR
          prefix: "/canary"
      route: # THEN
      - destination:
          host: fleetman-webapp.default.svc.cluster.local
          subset: experimental
    - match:
      - uri:
          prefix: "/"
      route:  
      - destination:
          host: fleetman-webapp.default.svc.cluster.local
          subset: original
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp-dr
  namespace: default
spec:
  host: fleetman-webapp.default.svc.cluster.local
  subsets:
    - labels:
        version: original
      name: original
    - labels:
        version: experimental
      name: experimental
